# SuperMario

./: .gitignore  CMakeLists.txt  CppProperties.json  Makefile  Makefile.mak  README.md
source/: Core.cpp  main.cpp
